# ai-world

./: README.md
MCP-MS-TEAMS-WEBHOOK/: .env.example  README.md  REF_MCP.JSON  example_usage.py  mcp-teams-webhook.code-workspace  pyproject.toml  requirements.md  run_server.py  sample_config.json
MCP-MS-TEAMS-WEBHOOK/src/mcp_teams_webhook/: __init__.py  __main__.py  server.py
MCP-MS-TEAMS-WEBHOOK/src/mcp_teams_webhook/models/: __init__.py  base.py  constants.py  messages.py
MCP-MS-TEAMS-WEBHOOK/src/mcp_teams_webhook/preprocessing/: __init__.py  base.py  teams.py
MCP-MS-TEAMS-WEBHOOK/src/mcp_teams_webhook/teams/: __init__.py  client.py  config.py  message.py
MCP-MS-TEAMS-WEBHOOK/tests/: conftest.py
MCP-MS-TEAMS-WEBHOOK/tests/unit/: test_client.py  test_config.py  test_models.py
